--- a/pages/creatineblog.css
+++ b/pages/creatineblog.css
@@ -85,7 +85,7 @@ main {
 
 /* ---------------------------------------- Content ---------------------------------------- */
 
-.content {
+/* .content {
     background-color: seashell;
     grid-row: 3/4;
     grid-column: 1/4;
@@ -130,7 +130,57 @@ li {
     font-size: 1.5em;
     text-align: justify;
    
+} */
+
+.content {
+    background-color: seashell;
+    grid-row: 3/4;
+    grid-column: 1/4;
+    display: flex;
+    flex-direction: column;
+    margin-right: 5em;
+    margin-left: 5em;
+    padding: 1em;
+    border: 1px solid rgb(196, 184, 175);
+    margin-top: 0%;
+    
+
 }
+
+.date {
+    font-size: 0.8em;
+    color: rgb(196, 184, 175);
+}
+
+/* h1 {
+    font-size: 2em;
+    text-align: center;
+} */
+
+.creatineimagediv {
+    display: flex;
+    justify-content: center;
+    
+       
+}
+
+li {
+    
+    font-size: 1em;    
+    margin-left: 1em;
+    
+}
+
+
+
+.maincontent {
+    font-size: 1em;
+    text-align: justify;
+    
+    
+   
+}
+
 
 /* ---------------------------------------- Comments ---------------------------------------------- */
 
