--- a/pages/creatineblog.css
+++ b/pages/creatineblog.css
@@ -152,10 +152,10 @@ li {
     color: rgb(196, 184, 175);
 }
 
-/* h1 {
+h1 {
     font-size: 2em;
     text-align: center;
-} */
+}
 
 .creatineimagediv {
     display: flex;
