--- a/pages/creatineblog.css
+++ b/pages/creatineblog.css
@@ -188,6 +188,14 @@ label {
     font-size: 1.8em;
 }
 
+#comments {
+    border: 2px solid brown;
+    width: 50%;
+    height: 20vh;
+
+}
+
+
 
 
 /* -----------------------------------------Footer------------------------------------------------- */
@@ -315,7 +323,20 @@ label {
         text-align: justify;
        
     }
+    
+    /* --------------------------------800px Comments ------------------------------------------ */
 
+
+    label {
+        font-size: 2.5em;
+    }
+
+    #comments {
+       
+        width: 100%;
+        height:40vh;
+    
+    }
    
 
     /* --------------------------------800px Footer ------------------------------------------ */
@@ -332,9 +353,7 @@ label {
     }
 
     
-
-    
-    
+   
     
     
     
