--- a/style.css
+++ b/style.css
@@ -112,6 +112,13 @@ button:hover {
 
 }
 
+.contactmebutt {
+    text-decoration: none;
+    font-size: 1em;
+    color: black;
+}
+
+
 /* ------------------------------------Images----------------------------------------------- */
 .images {
     
